@@ -1,6 +1,7 @@
 2012-01-29  Jesse Kornblum  <research@jessekornblum.com>:
 
 	* src/dig.cpp: Check for junction points before adding files to queue
+	* src/display.cpp: Removed redefinition of vasprintf. It is apparently now part of the compiler's stdio.h
 
 2012-01-28  Jesse Kornblum  <research@jessekornblum.com>:
 
